--- a/settings.json
+++ b/settings.json
@@ -9,12 +9,12 @@
 	"auto_leave_msg": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "@ZeeoneOfcོ",
-	"ownername": "ZeeoneOfcོ",
-	"botname":"Ａʟᴘʜᴀʙᴏᴛ",
+	"ownerNumber": "6289526982240",
+	"ownerNumberr": "6289526982240",
+	"cr": "@𝐁𝐎𝐓𝐙 𝐁𝐀𝐑𝐑𝐘𝐀𝐍𝐃𝐄𝐗𝐗",
+	"ownername": "AHMAD",
+	"botname":"𝐁𝐎𝐓𝐙 𝐁𝐀𝐑𝐑𝐘𝐀𝐍𝐃𝐄𝐗𝐗",
 	"thumb":"thumbnail_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
-	"fake": " 「  Ａʟᴘʜᴀʙᴏᴛ  」\nCreated By @ZeeoneOfcོ"
+	"fake": " 「  Ａʟᴘʜᴀʙᴏᴛ  」\nCreated By @𝐁𝐎𝐓𝐙 𝐁𝐀𝐑𝐑𝐘𝐀𝐍𝐃𝐄𝐗𝐗"
 }
